[project]
name = "mini-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "elasticsearch[async]>=8.19.0,<9",
    "faker>=40.4.0",
    "fastapi[standard]>=0.129.0",
    "httpx>=0.28.1",
    "pymongo>=4.16.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "uvicorn>=0.40.0",
]
